--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,13 +37,13 @@ dependencies = [
     "rich>=13.0.0",
     "langgraph-cli[inmem]>=0.3.1",
     "langsmith>=0.3.37",
-    "langchain-google-vertexai>=2.0.25",
     "langchain-google-genai>=2.1.5",
     "ipykernel>=6.29.5",
     "supabase>=2.15.3",
     "mcp>=1.9.4",
     "langchain-aws>=0.2.28",
     "pandas>=2.3.1",
+    "langchain-core>=0.3.74",
 ]
 
 [project.optional-dependencies]
