--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,8 @@ services:
     uv sync --frozen
 
   startCommand: |
-    uv run uvicorn server:app --host 0.0.0.0 --port $PORT
+    uvx --refresh --from "langgraph-cli[inmem]" --with-editable . --python 3.11 \
+      langgraph dev --host 0.0.0.0 --port $PORT --allow-blocking
 
   envVars:
     - key: OPENAI_API_KEY
@@ -23,5 +24,4 @@ services:
       value: "true"
     - key: LANGCHAIN_ENDPOINT
       value: "https://api.smith.langchain.com"
-    - key: LANGCHAIN_PROJECT
-      value: "odr-prod"
+
